# navigaattori

./: .gitignore  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  gen_licenses.py  gen_sbom.py  indirect-package-names.yml  mkdocs.yml  navigaattori.ABOUT  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  third-party-fallbacks.yml
docs/: SUMMARY.md  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
navigaattori/: __init__.py  __main__.py  api.py  approvals.py  bind.py  changes.py  cli.py  eject.py  layout.py  liitos_meta.py  meta.py  structures.py  template_loader.py
navigaattori/templates/: liitos_vocabulary.yml
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: test_api.py  test_approvals.py  test_bind.py  test_changes.py  test_cli.py  test_eject.py  test_layout.py  test_meta.py  test_template_loader.py
test/fixtures/basic/: structures.yml
test/fixtures/basic/foo/: structure.yml
test/fixtures/guess/foo/: approvals-wrong-key.yml  bind.txt  changes-wrong-key.yml  changes.yml  layout.yml  meta-base.yml  meta-default-wrong-top-level-key.yml  meta-default.yml  spaces_only.md  structure.yml
test/fixtures/guess/foo/folder/: other.md
test/fixtures/key-no-map/: structures.yml
test/fixtures/missing-key/: structures.yml
